#11339 -- fix layout issues + some bugs

--- a/skin/frontend/wonderhop/default/css/sales/sales.css
+++ b/skin/frontend/wonderhop/default/css/sales/sales.css
@@ -151,7 +151,7 @@ ul#cat_sales li a {
 
 .sales_section-closing .sale_text { text-align: center; }
 
-
+.sales-page .main .page_end_normal.page_end_sales_page1 { display:block; width:100%; }
 
 
 
